compiler/tests/compile-error/import-parse-errors.arret
(import (unknown [stdlib base]))
        ;^^^^^^^ ERROR expected import filter keyword, found symbol

(import (:rename [stdlib base] true))
                              ;^^^^ ERROR expected identifier rename map, found boolean true

(import (:rename [stdlib base] {foo bar} 1))
       ;^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ERROR wrong argument count; expected 2

(import (:prefix [stdlib base] test- 1))
       ;^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ERROR wrong argument count; expected 2

(import (:prefixed [stdlib base] 1))
       ;^^^^^^^^^^^^^^^^^^^^^^^^^^^ ERROR wrong argument count; expected 1

(import 4)
       ;^ ERROR bad import set

(import []) ;~ ERROR module name requires a least two components
(import [just-one]) ;~ ERROR module name requires a least two components